--- a/t2.css
+++ b/t2.css
@@ -28,18 +28,11 @@ li{
 header{
     background-image: url("image/anhchatluongcao.jpg");
     background-position: center;
-    background-repeat:no-repeat;
     background-size: cover;
     width: 100vw;
     height: 100vh;
 }
-/*.bg-image{*/
-/*    position: absolute;*/
-/*    width: 100%;*/
-/*    height: 105%;*/
-/*    background-color: black;*/
-/*    opacity: 0.4;*/
-/*}*/
+
 .top{
     position: absolute;
     width: 100%;
@@ -58,11 +51,12 @@ header{
     margin-left: 12px;
     position: relative;
 }
+/*tạo vạch kẻ đỏ*/
 .header-top >ul >li::after{
     position: absolute;
     content: "";
     display: block;
-    bottom: -2px;
+    bottom: -5px;
     height: 3px;
     width: 0%;
     background-color: #d61b06;
@@ -77,20 +71,6 @@ header{
     color: black;
     font-weight: bold;
 }
-.header-top ul i{
-    font-size: 32px;
-    color: black;
-    margin: 12px; 0 0 12px;
-    margin-bottom: 150px;
-    display: none;
-}
-.header-top>i{
-    font-size: 32px;
-    color: coral;
-    cursor: pointer;
-    display: none;
-}
-
 .header-text{
     position: absolute;
     top: 50%;
@@ -126,6 +106,36 @@ header{
 }
 .header-text button:hover{
     background-color: #d61b06;
+}
+/*....................submenu.................*/
+.submenu{
+    position: absolute;
+    background-color: #dddddd;
+    width: 150px;
+    height: auto;
+    left: 0;
+    top:100%;
+    padding: 10px;
+    display: none;
+}
+.submenu ul{
+    display: flex;
+    flex-direction: column;
+}
+.submenu ul li{
+    padding: 6px 0;
+}
+.submenu ul li a:nth-child(1){
+    transition: 0.5s;
+}
+.submenu ul li:hover a{
+    color: darkorange;
+}
+.submenu ul li:hover{
+    background: none;
+}
+.header-top ul li:hover .submenu{
+    display: block;
 }
 /***....................adress form............*/
 .address-form{
@@ -195,39 +205,11 @@ header{
     color: #dddddd;
     border-radius: 5px;
 }
-/*......submenu.....*/
+
 .header-top ul li{
     position: relative;
 }
-.submenu{
-    position: absolute;
-    background-color: #dddddd;
-    width: 150px;
-    height: auto;
-    left: 0;
-    top:100%;
-    padding: 10px;
-    display: none;
-}
-.submenu ul{
-    display: flex;
-    flex-direction: column;
-}
-.submenu ul li{
-    padding: 6px 0;
-}
-.submenu ul li a:nth-child(1){
-    transition: 0.5s;
-}
-.submenu ul li:hover a{
-    color: darkorange;
-}
-.submenu ul li:hover{
-    background: none;
-}
-.header-top ul li:hover .submenu{
-    display: block;
-}
+
 /*---------------------*/
 .slider{
     padding: 20px 0;
@@ -286,7 +268,6 @@ header{
 .slider-content-rigt li img{
     width: 170px;
     height: 170px;
-
 }
 .slider-content-left-top-btn{
     position: absolute;
@@ -294,7 +275,6 @@ header{
     display: flex;
     justify-content: space-between;
     width: 100%;
-
 }
 .slider-content-left-top-btn i{
     font-size: 32px;
